--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!----Side bar--->
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
-                  <div class="author-img" style="background-image: url(images/Shubham.jpg);"></div>
+                  <div class="author-img" style="background-image: url(images/shubham.jpg);"></div>
                   <h1 id="colorlib-logo"><a href="https://shubham1898580.github.io/cv7/">Shubham Jain</a></h1>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
